# skill-connect

./: .env  CHANGES.md  DEVELOPMENT_GUIDE.md  GETTING_STARTED.md  README.md  main.py  pyproject.toml  start.bat
app/: config.py
app/auth/: auth.py
app/database/: connection.py
app/models/: __init__.py
app/static/css/: style.css
